# mair_afairs

./: .gitmodules
c_dylib/: lib.c  main.c
gooey/: CMakeLists.txt  main.mm
ws2/: main.cpp  premake5.lua
